--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -25,10 +25,10 @@
 
           <nav>
             <ul class="nav nav-justified">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="<%= page_path(@conn, :index)%>">Home</a></li>
                 <li><a href="#">Tutorials</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="<%= page_path(@conn, :about)%>">About Us</a></li>
+                <li><a href="<%= page_path(@conn, :contact)%>">Contact Us</a></li>
             </ul>
           </nav>
       </header>
